Change dictionary type

--- a/Example/EFIconFont/Base.lproj/Main.storyboard
+++ b/Example/EFIconFont/Base.lproj/Main.storyboard
@@ -42,6 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="125.59999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
